# id_effect

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  dylint.toml  init.sh  moon.yml  treefmt.ci.toml  treefmt.toml
crates/effect_rs/: Cargo.toml  moon.yml
crates/effect_rs_config/: Cargo.toml  moon.yml
crates/effect_rs_config/src/: config_desc.rs  error.rs  lib.rs  provider.rs
crates/effect_rs_reqwest/: Cargo.toml  moon.yml
crates/effect_rs_tower/: Cargo.toml  moon.yml
crates/id_effect/: Cargo.toml  README.md  moon.yml
crates/id_effect/benches/: effect_macro_bind_free.rs  env_lookup.rs  phase0_baseline.rs
crates/id_effect/book/: STYLE.md  book.toml
crates/id_effect/examples/: 001_effect_value.rs  002_fail_boundary.rs  003_map.rs  004_flat_map.rs  005_pipe.rs  006_effect_macro_binds.rs  007_effect_macro_discard.rs  008_effect_macro_env.rs  009_result_into_bind.rs  010_one_effect_macro_per_fn.rs  011_map_error.rs  012_catch.rs  013_fail_into.rs  014_err_macro.rs  015_or_variants.rs  016_flat_map_union.rs  017_cause_optional.rs  018_exit_type.rs  019_tagged_cell.rs  020_cons_nil.rs  021_ctx_macro.rs  022_get_here.rs  023_get_path.rs  024_get_mut.rs  025_req_type.rs  026_layer_fn.rs  027_stack_layers.rs  028_layer_build_errors.rs  029_service_key.rs  030_service_def.rs  031_service_constructor.rs  032_service_env.rs  033_layer_service.rs  034_provide_service.rs  035_layer_graph.rs  036_layer_graph_diagnostics.rs  037_from_async_basic.rs  038_from_async_map_err.rs  039_run_async.rs  040_capability_app.rs  (+77 more)
crates/id_effect/src/: lib.rs  match_.rs  parallelism.rs
crates/id_effect/tests/: cap_project_compose.rs  cap_project_proptest.rs  cap_set_high_arity.rs  cap_set_project_all.rs  coverage_gate_boost.rs  coverage_gate_v3.rs  effect_graph_parallel.rs  effect_graph_typed_dependency.rs  effect_macro_coverage.rs  graph_proptest.rs  match_effect_coverage.rs  parallel_dispatch_coverage.rs  stream_ops_coverage.rs  ui_compile_fail.rs
crates/id_effect_ai/: Cargo.toml  README.md  moon.yml
crates/id_effect_ai/examples/: 010_openai_once.rs  011_anthropic_once.rs  020_cursor_agent_once.rs  ask_once.rs  mcp_server_template.rs
crates/id_effect_ai/src/: config.rs  error.rs  http_util.rs  lib.rs  model.rs  retry.rs  sse.rs  streaming.rs  tracing_util.rs
crates/id_effect_ai/tests/: anthropic_wiremock.rs  config.rs  cursor_fixtures.rs  mock_complete.rs  model.rs  openai_wiremock.rs  streaming.rs
crates/id_effect_axum/: Cargo.toml  moon.yml
crates/id_effect_axum/examples/: 010_routing_hello.rs  020_async_effect.rs  020_capability_run_with.rs  030_execute_handler.rs  040_app_host.rs
crates/id_effect_axum/src/: channel_bridge.rs  health.rs  json.rs  lib.rs  routing.rs
crates/id_effect_axum/tests/: security.rs
crates/id_effect_cli/: Cargo.toml  README.md  moon.yml
crates/id_effect_cli/src/: exit_code.rs  generator.rs  lib.rs  run.rs
crates/id_effect_cli/tests/: cli_probe_exit.rs  diagnose_integration.rs  id_effect_main.rs
crates/id_effect_config/: Cargo.toml  moon.yml
crates/id_effect_config/examples/: 001_extract_toml.rs  002_map_provider.rs  003_figment_provider_layer.rs  004_or_else_provider.rs
crates/id_effect_config/src/: ambient.rs  config_desc.rs  error.rs  lib.rs  load.rs  provider.rs  providers.rs  secret.rs
crates/id_effect_dioxus/: Cargo.toml  README.md  moon.yml
crates/id_effect_dioxus/src/: bridge.rs  forms.rs  lib.rs  realtime.rs
crates/id_effect_dioxus/tests/: forms_realtime.rs  sse_wire.rs  ws_wire.rs
crates/id_effect_events/: Cargo.toml  README.md  moon.yml
crates/id_effect_events/src/: cqrs.rs  envelope.rs  error.rs  event_store.rs  lib.rs  projection.rs  projection_runner.rs  providers.rs  sql_journal.rs
crates/id_effect_events/tests/: es_entity_journal.rs  sql_journal.rs
crates/id_effect_fsm/: Cargo.toml  README.md  moon.yml
crates/id_effect_fsm/examples/: 002_durable_door_fsm.rs
crates/id_effect_fsm/src/: error.rs  interpreter.rs  lib.rs  machine.rs  matcher.rs  saga.rs  session.rs  visualize.rs  workflow.rs
crates/id_effect_graph/: Cargo.toml  README.md  moon.yml
crates/id_effect_graph/src/: dag.rs  error.rs  lib.rs  topological_sort.rs
crates/id_effect_graph/tests/: topological_sort_proptest.proptest-regressions  topological_sort_proptest.rs
crates/id_effect_host/: Cargo.toml  README.md  moon.yml
crates/id_effect_host/src/: lib.rs  lifecycle.rs  modules.rs  security.rs
crates/id_effect_host/tests/: oauth.rs  security.rs
crates/id_effect_jobs/: Cargo.toml  README.md  moon.yml
crates/id_effect_jobs/examples/: 010_messaging_e2e.rs  020_events_workflow_e2e.rs
crates/id_effect_jobs/src/: apalis.rs  broker.rs  error.rs  kafka.rs  lib.rs  obix_inbox.rs  obix_outbox.rs  outbox.rs  runner.rs
crates/id_effect_jobs/tests/: integration.rs  pg_integration.rs
crates/id_effect_lint/: Cargo.toml  sgconfig.yml
crates/id_effect_lint/rules/: a-fn-signatures.yml  b-effect-macro.yml  c-async.yml  d-runtime.yml  e-services.yml  f-errors.yml  g-concurrency.yml  h-time.yml  i-testing.yml  j-observability.yml  k-schema.yml
crates/id_effect_lint/src/: diag.rs  lib.rs  utils.rs
crates/id_effect_lint/ui/: no_async_fn.rs
crates/id_effect_logger/: Cargo.toml  moon.yml
crates/id_effect_logger/examples/: context_service.rs  effect_logger.rs  layer_build.rs  log_effects.rs  macro_block_tail.rs  macro_sync_bind.rs
crates/id_effect_macro/: Cargo.toml  moon.yml
crates/id_effect_opentelemetry/: Cargo.toml  README.md  moon.yml
crates/id_effect_optics/: Cargo.toml  README.md
crates/id_effect_parse/: Cargo.toml  README.md  moon.yml
crates/id_effect_platform/: Cargo.toml  README.md  moon.yml
crates/id_effect_proc_macro/: Cargo.toml  moon.yml
crates/id_effect_reqwest/: Cargo.toml  moon.yml
crates/id_effect_resilience/: Cargo.toml  README.md
crates/id_effect_rpc/: Cargo.toml  README.md  moon.yml
crates/id_effect_sql/: Cargo.toml  README.md  moon.yml
crates/id_effect_sql_pg/: Cargo.toml  README.md  moon.yml
crates/id_effect_tokio/: Cargo.toml  moon.yml
(+912 files in other folders)
