[workspace]
resolver = "2"
exclude = [".tmp", "tmp", "crates/id_effect_lint"]
members = [
  "crates/id_effect",
  "crates/id_effect_axum",
  "crates/id_effect_config",
  "crates/id_effect_logger",
  "crates/id_effect_macro",
  "crates/id_effect_proc_macro",
  "crates/id_effect_reqwest",
  "crates/id_effect_tokio",
  "crates/id_effect_tower",
]

# More stable / comparable Criterion numbers than default bench profile (inherits release).
[profile.bench]
lto = "thin"
codegen-units = 1
