[workspace]
resolver = "2"
exclude = [".tmp", "tmp", "crates/id_effect_lint"]
members = [
  "crates/id_effect",
  "crates/id_effect_axum",
  "crates/id_effect_cli",
  "crates/id_effect_config",
  "crates/id_effect_logger",
  "crates/id_effect_macro",
  "crates/id_effect_opentelemetry",
  "crates/id_effect_optics",
  "crates/id_effect_platform",
  "crates/id_effect_proc_macro",
  "crates/id_effect_reqwest",
  "crates/id_effect_resilience",
  "crates/id_effect_rpc",
  "crates/id_effect_sql",
  "crates/id_effect_host",
  "crates/id_effect_sql_pg",
  "crates/id_effect_tokio",
  "crates/id_effect_tower",
  "crates/id_effect_parse",
  "crates/id_effect_workflow",
  "crates/id_effect_fsm",
  "crates/id_effect_events",
  "crates/id_effect_graph",
  "crates/id_effect_jobs",
  "crates/id_effect_ai",
  "crates/id_effect_dioxus",
  "examples/cli-minimal",
]

# More stable / comparable Criterion numbers than default bench profile (inherits release).
[profile.bench]
lto = "thin"
codegen-units = 1
