[package]
name = "id_effect_ai"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Vendor-neutral LLM client traits and streaming for id_effect"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "ai", "llm", "streaming", "mcp"]
categories = ["api-bindings", "asynchronous"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "3.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
id_effect_tokio = { path = "../id_effect_tokio", version = "3.0.0" }
