[package]
name = "id_effect_axum"
version = "1.2.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Axum integration for the workspace `effect` crate — run Effect handlers on Tokio"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "id_effect_axum"

[dependencies]
id_effect = { path = "../id_effect", version = "1.2.0", features = [
  "schema-serde",
] }
id_effect_tokio = { path = "../id_effect_tokio", version = "1.2.0" }
axum = { version = "0.8" }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
