[package]
name = "id_effect_axum"
version = "3.0.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Axum integration for the workspace `effect` crate — run Effect handlers on Tokio"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "id_effect_axum"

[dependencies]
id_effect = { path = "../id_effect", version = "3.0.0", features = [
  "schema-serde",
] }
id_effect_tokio = { path = "../id_effect_tokio", version = "3.0.0" }
id_effect_config = { path = "../id_effect_config", version = "3.0.0" }
id_effect_platform = { path = "../id_effect_platform", version = "4.0.0" }
axum = { version = "0.8" }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "signal",
  "net",
  "time",
] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
