[package]
name = "id_effect_events"
version = "3.0.0"
edition = "2024"
description = "Event sourcing, projections, and CQRS boundaries for id_effect programs"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "projection", "event-store"]
categories = ["data-structures"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "3.0.0", features = [
  "schema-serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26"
tempfile = "3"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
