[package]
name = "id_effect_fsm"
version = "0.4.0"
edition = "2024"
description = "Typed finite-state machines, sagas, and session types for id_effect programs"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "fsm", "state-machine", "saga", "session-types"]
categories = ["data-structures"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "0.4.0" }
id_effect_workflow = { path = "../id_effect_workflow", version = "0.4.0", default-features = false, features = [
  "memory",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"
