[package]
name = "id_effect_jobs"
version = "0.3.0"
edition = "2024"
description = "Production async messaging — Apalis jobs, obix outbox/inbox, Kafka broker"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "jobs", "queue", "outbox", "messaging"]
categories = ["asynchronous"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
default = ["memory"]
memory = []
postgres = ["dep:sqlx", "dep:tokio"]
apalis = ["postgres", "dep:apalis", "dep:apalis-core", "dep:apalis-postgres"]
obix = ["postgres", "dep:obix", "dep:job"]
kafka = ["dep:rdkafka", "dep:tokio"]

[dependencies]
id_effect = { path = "../id_effect", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

sqlx = { version = "0.9", optional = true, default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tokio = { version = "1.50.0", optional = true, features = ["sync"] }
apalis = { version = "1.0.0-rc.8", optional = true, default-features = false }
apalis-core = { version = "1.0.0-rc.8", optional = true, default-features = false }
apalis-postgres = { version = "1.0.0-rc.8", optional = true, default-features = false, features = [
  "migrate",
  "tokio-comp",
  "chrono",
] }
obix = { version = "0.2.28", optional = true, default-features = true }
job = { version = "0.6", optional = true, default-features = true }
rdkafka = { version = "0.37", optional = true, default-features = false, features = [
  "tokio",
] }

[dev-dependencies]
id_effect_events = { path = "../id_effect_events", features = ["es-entity"] }
id_effect_workflow = { path = "../id_effect_workflow", default-features = false, features = [
  "duroxide",
] }
rstest = "0.26"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
id_effect_tokio = { path = "../id_effect_tokio" }
id_effect_sql_pg = { path = "../id_effect_sql_pg" }

[[test]]
name = "integration"
required-features = ["memory"]

[[test]]
name = "pg_integration"
path = "tests/pg_integration.rs"
required-features = ["apalis", "obix"]

[[example]]
name = "010_messaging_e2e"
path = "examples/010_messaging_e2e.rs"
required-features = ["memory", "apalis", "obix"]

[[example]]
name = "020_events_workflow_e2e"
path = "examples/020_events_workflow_e2e.rs"
required-features = ["memory", "obix", "postgres"]
