[package]
name = "id_effect_lint"
version = "0.1.0"
description = "Custom Dylint lints enforcing idiomatic Effect.rs code"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

# No dylint_linting, clippy_utils, or dylint_testing – we talk directly to
# rustc_* crates so the library is always compatible with whatever nightly
# devenv provides.  UI tests can be added once a rustup-compatible CI env
# is available.

[package.metadata.rust-analyzer]
rustc_private = true
