[package]
name = "id_effect_lint"
version = "3.0.0"
description = "Custom rustc lints for idiomatic Effect.rs code (dynamic plugin; nightly rustc_private)"
edition = "2024"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"
documentation = "https://github.com/Industrial/id_effect/tree/main/crates/id_effect_lint"
readme = "README.md"
keywords = ["effect", "lint", "rustc", "plugin"]
categories = ["development-tools"]
# Omit test harness + rule YAML from the crates.io tarball (src + README only for consumers).
exclude = ["ui", "rules", "sgconfig.yml"]

[lib]
crate-type = ["cdylib"]

# Links against unstable `rustc_*` crates; build with a nightly toolchain that matches your driver.

[package.metadata.rust-analyzer]
rustc_private = true
