[package]
name = "id_effect_macro"
version = "1.2.0"
edition = "2024"
description = "Declarative macros for the `effect` crate (`ctx!`, `pipe!`, …). Procedural `effect!` is in `id_effect_proc_macro` — Rust cannot mix both in one proc-macro crate."
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "id_effect_macro"
# Normal library: `macro_rules!` only. Expansions use `::id_effect::…` paths (no dependency on `effect`).
