[package]
name = "id_effect_parse"
version = "3.0.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Parser combinators, pretty printing, invertible codecs, and value diffs for id_effect"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lib]
name = "id_effect_parse"

[dependencies]
id_effect = { path = "../id_effect", version = "3.0.0" }

[dev-dependencies]
rstest = "0.26"
