[package]
name = "id_effect_parse"
version = "0.3.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Parser combinators, pretty printing, invertible codecs, and value diffs for id_effect"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lib]
name = "id_effect_parse"

[dependencies]
id_effect = { path = "../id_effect", version = "0.3.0" }

[dev-dependencies]
rstest = "0.26"
id_effect_proc_macro = { path = "../id_effect_proc_macro" }
