[package]
name = "id_effect_platform"
version = "0.2.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Platform capability traits (HTTP, FS, process) for id_effect — @effect/platform-style boundaries"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "async", "http", "filesystem", "platform"]
categories = ["asynchronous", "network-programming"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "0.2.0" }
bytes = { version = "1" }
http = { version = "1" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1.50.0", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
] }

[dev-dependencies]
id_effect_tokio = { path = "../id_effect_tokio", version = "0.2.0" }
rstest = "0.26"
tempfile = "3"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
